--- a/apartment.html
+++ b/apartment.html
@@ -58,38 +58,32 @@
 		</div>
 	</div>
 	<div class="b-content">
-		<div class="b b-main">
+		<div class="b-apartment">
 			<div class="b-block">
-				<h1><span>Новые таунхаусы</span><br>в академгородке</h1>
-				<img src="i/bird.png">
-				<h2>престижно. комфортно. элитно.</h2>
-				<div class="main-square clearfix">
-					<span class="left">157</span>
-					<span class="left">386</span>
-					<span class="left mid">от 6,5 млн</span>
-					<span class="right">58</span>
-					<span class="right">35</span>
+				<h2></h2>
+				<div class="apartment-cont clearfix">
+					<div class="left"></div>
+					<div class="right">
+						<h3></h3>
+						<ul>
+							<li>
+								<div></div>
+								<h4></h4>
+							</li>
+							<li>
+								<div></div>
+								<h4></h4>
+							</li>
+							<li>
+								<div></div>
+								<h4></h4>
+							</li>
+						</ul>
+						<div></div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="b b-plan">
-			<div class="b-block">
-				<ul>
-					<li>жилая площадь<br>от 157 до 386 м<sup>2</sup></li>
-					<li>Стоимость квартиры от 6 100 000 рублей</li>
-					<li>35 из 58<br>Доступных квартир</li>
-				</ul>
-			</div>
-			<div class="b-block b-plan-img clearfix">
-				<div class="left"></div>	
-				<a href="#" class="center">
-					<span></span>
-					<h3>планировка квартир</h3>
-				</a>
-				<div class="right"></div>     
-			</div>                            
-		</div>	
-		<div id="map_canvas"></div>
 	</div>
 	<div class="b b-footer clearfix">
 		<a href="#">Обратная<br>связь</a>
